--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body, h1, h2, p{
+html, body, h1, h2, h3, h4, h5 p{
     padding: 0;
     margin: 0;
     border: 0;
@@ -11,91 +11,105 @@ body {
     /* display: flex; */
     /* justify-content: space-between; */
 }
-  header {
-    display: flex;
-    /* position: absolute;  */
-    background-color: #ffffff;
-    justify-content: space-between;
-    width: 100%;
-    color: #000000;
-    /* flex-wrap: wrap; */
-    /* border-bottom: 1px #ffffff solid; */
-    /* margin: 0 0 0 0px; */
-    
-  }
-  header p {
-    font-size: 1em;
-    color: #000000;
-    padding: 20px 0 5px 0;
-    margin-left: 20px;
-  }
-  nav {
-    display: flex;
-    color: #000000;
-    text-decoration: none;
-    justify-content: space-between;
-    padding: 20px 50px 5px 0;
-  }
-  nav a {
-    text-decoration: none;
-    /* justify-content: right; */
-    /* color: #ffffff; */
-    padding: 0px 10px;
-    text-align: center;
-    font-size: 1em ;
-    /* background-color: #ffffff; */
-    color: #000000;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+header {
+  display: flex;
+  padding: 1em;
+  background-color: #ffffff;
+  justify-content: space-between;
+  width: 100%;
+  color: #000000;  
 }
-  p {
-      text-align: left;
-      text-align: left;
-  }
-/* 
-  div {
-
-  } */
+#logo {
+  display: flex;
+}
+nav {
+  display: flex;
+  color: #000000;
+  text-decoration: none;
+  justify-content: space-between;
+  padding: 15px 75px 15px 0;
+}
+nav a {
+  text-decoration: none;
+  padding: 0px 30px;
+  text-align: center;
+  font-size: 1em ;
+  color: #000000;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+p {
+  text-align: left;
+  text-align: left;
+}
 .mainContent {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  padding: 40px;
   background-image: url("images/dust_scratches.webp");
   background-repeat: repeat;
 }
 .content {
-  padding: 30px 10px 10px 10px;
+  padding: 0px 10px 10px 10px;
   width: 350px;
   height: 450px;
   text-align: left;
-  /* display: flex; */
-}
-#image {
-  display: flex;
-  justify-content: end;
-  width: 350px;
-  height: 450px;
-  background-image: url("images/apple-breakfast-quinoa-7.jpeg");
 }
 #arrow {
+  padding-left: 10px;
   width: 30px;
   height: 20px;
 }
+.image {
+  width: 350px;
+  height: 450px;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+#breakfast {
+  background-image: url("images/apple-breakfast-quinoa-7.jpeg");
+  background-size: cover;
+}
+#lunch {
+  background-image: url("images/pasta-salad-recipe-for-lunch.jpeg");
+  background-size: cover;
+}
+#dinner {
+  background-image: url("images/Shrimp.jpeg");
+  background-size: cover;
+}
 #whiteTag {
   background-color: rgb(255, 255, 255);
+  padding: 10px;
+  width: fit-content;
 }
 #greenTag {
-  background-color: green;
+  background-color: rgb(51, 205, 51);
+  padding: 10px;
+  width: 125px;
 }
 h1 {
-    font-size: 18mm;
-    font-weight: bold;
+  font-size: 2em;
+  color: red;
+  margin-left: 40px;
 }
-  img {
-      /* width: 350px;
-      height: 450px; */
-      /* padding: 10px; */
-      /* border-radius: 80em 80em 80em 80em; */
-      /* border: 2px solid whitesmoke; */
-      /* box-shadow: 10px 13px 15px 10px whitesmoke */
-  }
+h2 {
+  font-size: 2em;
+  color: rgb(51, 205, 51);
+  margin: 0em;
+}
+h3 {
+    font-size: 3em;
+    font-weight: bold;
+    max-width: 200px;
+}
+h4 {
+
+}
+h5 {
+  margin: 0px;
+}
+
   
